--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
         <title>Grano de CAFÉ</title>
     </head>
     <body>
-        
+        <header>
+            <ul id="barra">
+                <li>
+                    <a href="">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Briefcase
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Contact  
+                    </a>
+                </li>
+            </ul>
+            <nav>
+                <button>
+                    Toggle
+                </button>
+            </nav>
+        </header>
+        <br><br>
+        <section>
+            <img src="resources/images/hacienda.jpg" alt="">
+            <h1>
+                A tu lado, en cada momento
+            </h1>
+        </section>
+        <br><br>
+        <main id="listaTarjetas">
+
+        </main>
     </body>
 </html>
